# lumin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  biome.json
client/: package.json  vite.config.ts
client/src/@generated/: server.ts
client/src/components/: add-torrent-dialog.tsx  badge.tsx  poster.tsx  reconcile-button.tsx  torrent-item.tsx
client/src/pages/: +Layout.tsx
client/src/pages/index/: +Page.tsx
migrations/: 20250408032906_init.sql  20250530173425_drop_save_dir.sql  20250601012910_better_removal_handling.sql
src/: config.rs  debrid.rs  error.rs  extractor.rs  fuse.rs  main.rs  qbittorrent.rs  reconciler.rs  rpc.rs  state.rs  torznab.rs
src/cache/: chunk.rs  downloader.rs  entry.rs  mod.rs  ratelimiter.rs  reader.rs
src/entities/: mod.rs  nodes.rs  prelude.rs  torrent_blocks.rs  torrent_files.rs  torrents.rs
src/helpers/: add_trackers_to_magnet_uri.rs  block_torrent.rs  get_user_agent.rs  mod.rs  parse_magnet_uri.rs  should_ignore_path.rs
src/mount/: mod.rs  node.rs
src/qbittorrent/: mod.rs  torrent.rs
