[package]
name = "lumin"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = 'abort'
# lto = true
# opt-level = "z"
# codegen-units = 1

[dependencies]
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "runtime-tokio",
    "macros",
    "sqlite-use-returning-for-3_35",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "json",
    # "gzip",
    # "deflate",
    # "zstd",
    "brotli",
    "http2",
    # "http3",
    "rustls-tls-native-roots",
] }
tokio = { version = "1.44", features = ["full"] }
urlencoding = "2.1"
sqlx = { version = "0.8", features = ["sqlite"] }
lazy_static = "1"
dotenv = "0.15"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1.0"
config = "0.15"
thiserror = "1.0"
ratelimit = "0.10"
fuse3 = { version = "0.8", features = ["tokio-runtime", "unprivileged"] }
libc = "0.2"
futures-util = "0.3"
hole-punch = "0.0.3"
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs"], optional = true }
juno = { git = "https://github.com/sylv/juno.git", branch = "main" }
specta = { version = "2.0.0-rc.22", features = ["derive"] }
url = "2.5.4"
rs_torrent_magnet = "0.3.0"
ffprobe = "0.4.0"
edit-xml = "0.1.0"

[features]
static = ["dep:tower-http"]

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
