[package]
name = "lumin"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = 'abort'

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "json",
    "gzip",
    "deflate",
    "zstd",
    "brotli",
    "http2",
    "rustls-tls-native-roots",
] }
tokio = { version = "1.44", features = ["full"] }
urlencoding = "2.1"
sqlx = { version = "0.8", features = ["sqlite"] }
lazy_static = "1"
dotenv = "0.15"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1.0"
config = "0.15"
thiserror = "1.0"
ratelimit = "0.10"
fuse3 = { version = "0.8", features = ["tokio-runtime", "unprivileged"] }
libc = "0.2"
futures-util = "0.3"
axum = { version = "0.8", features = ["multipart"] }
url = "2.5"
rs_torrent_magnet = "0.3"
hex = "0.4"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
